# Simple-LAN-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux.yml  macos.yml  release.yml  windows.yml
Source/Editor/: stdAfx.h
Source/Engine/: EMain.cpp  EMain.h  Relationship.cpp  stdAfx.h
Source/Engine/BulletCollision/CollisionShapes/: btConvexInternalShape.cpp
Source/Engine/Common/: CRC.h  Common.h  Console.cpp  DataTypes.h  FontData.cpp  FontData.h  Platform.h  PrintMessages.cpp
Source/Engine/Entities/: EntityMain.cpp  EntityMain.h  PhysicsEntity.cpp
Source/Engine/Graphics/: RenderScene.cpp  Shader.h  Texture.cpp  Texture.h
Source/Engine/Level/: BaseWorld.cpp  Brush.cpp  Polygon.cpp  Room.h  RoomBase.cpp  WorldVertex.cpp
Source/Engine/Model/: Import3D.cpp  ImportOBJ.h  Model.cpp  ModelIO.cpp
Source/Engine/NET/: Client.cpp  GetLastErrors.cpp  NetMain.h  NetworkMessage.cpp  Relationships.cpp  Server.cpp  Socket.cpp
Source/Game/: GClient.cpp  GConsole.cpp  GMain.cpp  GMain.h  GPlayer.cpp  GServer.cpp  GSession.cpp  stdAfx.h
Source/Game/Entities/: Explosion.cpp  Light.cpp  PlayerSpawn.cpp  Projectile.cpp  PushableModel.cpp  ZoneHurt.cpp
Source/MakeModel/: MakeModel.cpp
Source/Power/: WinMain.cpp  stdAfx.h
Source/Power/System/Shaders/: fragShader.shr  vertShader.shr
Source/Power/System/Shaders/Model_Test/: fragShader.shr  vertShader.shr
Source/Power/System/Shaders/RoomShaders/: fragShader.shr  vertShader.shr
Source/Power/System/Shaders/RoomShaders_/: fragShader.shr  vertShader.shr
Source/Power/System/Shaders/SimpleShaderShape/: fragShader.shr  fragShaderTexture.shr  vertShader.shr  vertShaderTexture.shr
Source/Power/System/Shaders/SkyBoxShaders/: fragShader.shr  vertShader.shr
Source/Power/System/Shaders/TextShaders/: fragShader.shr  vertShader.shr
Source/Test/: Main.cpp
scripts/: check-runtime-files.sh
